Fixed the embedded YouTube playlist on the Portfolio page being too small on mobile; fixed the Bitbucket link bottons on the portfolio project pages overflowing the container at certain window sizes

--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,10 @@ body {
 	overflow-y:auto;
 }
 
+.btn {
+	white-space: normal;
+}
+
 .social-icon {
 	width: 128px;
 	height: 128px;
